--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@emotion/styled": "^11.11.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "antd": "^5.18.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "next": "14.2.4",
+    "firebase": "^10.12.2",
+    "next": "12.1.0",
     "prettier": "^3.3.2",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.2",
