--- a/package.json
+++ b/package.json
@@ -8,24 +8,31 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "antd": "^5.18.3",
+    "axios": "^1.7.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "firebase": "^10.12.2",
+    "graphql": "^16.9.0",
     "next": "12.1.0",
     "prettier": "^3.3.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.7",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "eslint": "^8",
