--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-underscore-dangle": "off"
   }
 }
