--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^3.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recoil": "^0.7.7",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
