--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/button-has-type": "off",
     "react-hooks/exhaustive-deps": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "react/jsx-no-useless-fragment": "off"
   }
 }
