--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "react/button-has-type": "off",
     "react-hooks/exhaustive-deps": "off",
     "no-underscore-dangle": "off",
-    "react/jsx-no-useless-fragment": "off"
+    "react/jsx-no-useless-fragment": "off",
+    "Unexpected console statement.": "off" // console.log에 노란밑줄 거슬림
   }
 }
