--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.10.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "antd": "^5.18.3",
@@ -28,8 +29,11 @@
     "prettier": "^3.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.52.1",
+    "react-quill": "^2.0.0",
     "recoil": "^0.7.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
