--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.7",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.0",
@@ -43,5 +45,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5.5.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2"
   }
 }
