--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "12.1.0",
     "prettier": "^3.3.2",
     "react": "17.0.2",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.52.1",
     "react-quill": "^2.0.0",
