--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
+    "dompurify": "^3.1.6",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.7",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "eslint": "^8",
