--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["CLOUDINARY", "dompurify", "kakao", "Parens"]
+  "cSpell.words": ["APIKEY", "CLOUDINARY", "dompurify", "kakao", "Parens"]
 }
