--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-underscore-dangle": "off",
     "react/jsx-no-useless-fragment": "off",
     "react/require-default-props": "off",
-    "Unexpected console statement.": "off" // console.log에 노란밑줄 거슬림
+    "Unexpected console statement.": "off", // console.log에 노란밑줄 거슬림
+    "Unnecessary escape character.": "off"
   }
 }
