--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
     "react/jsx-no-useless-fragment": "off",
     "react/require-default-props": "off",
     "Unexpected console statement.": "off", // console.log에 노란밑줄 거슬림
-    "Unnecessary escape character.": "off"
+    "Unnecessary escape character.": "off",
+    "arrow-body-style": "off",
+    "no-restricted-syntax": "off"
+    // "@typescript-eslint/no-use-before-define": "off" // 선언전에 사용 오류 제거
   }
 }
