--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
     "no-console": "off", // console.log에 노란밑줄 거슬림2
     "Unnecessary escape character.": "off",
     "arrow-body-style": "off",
-    "no-restricted-syntax": "off"
+    "no-restricted-syntax": "off",
     // "@typescript-eslint/no-use-before-define": "off" // 선언전에 사용 오류 제거
+    "no-nested-ternary": "off"
   }
 }
